k8s-manifests/dev/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-stable
  namespace: dev
spec:
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 80
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-canary
  namespace: dev
spec:
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 80
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: dev
spec:
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 80
    name: http
